[package]
name = "rdza_game_test"
version = "0.1.0"
authors = ["Paweł Nowiński"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx-hal = "0.3.1"

# Backend na normalne systemy
[target.'cfg(not(target_os = "macos"))'.dependencies]
gfx-backend-vulkan = "0.3.3"

#backend na macos
[target.'cfg(target_os = "macos")'.dependencies]
gfx-backend-metal = "0.3.3"