[package]
name = "rdza_game_test"
version = "0.1.0"
authors = ["Paweł Nowiński"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = {version = "0.3.0", features = ["vulkan"]}
winit = "0.20.0-alpha3"
raw-window-handle = "0.1"

[build-dependencies]
glsl-to-spirv = "0.1.5"