[package]
name = "rdza_game_test"
version = "0.1.0"
authors = ["Paweł Nowiński <tygrysekpawelpiotr1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
# specs = { version = "0.15.1", features = ["specs-derive"] }
legion = "0.2.1"

[dependencies.cgmath]
version = "0.17.0"
features = ["mint"]